# BlacklistedAIProxy

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README-JA.md  README-ZH.md  README.md  SECURITY.md  VERSION  build-full-automated.bat  docker-compose.otel.yml  install-and-run.ps1  install-and-run.sh  otel-collector-config.yaml  package-lock.json  package.json  plugin-concepts.md  pnpm-lock.yaml  promptfoo.yaml  run-tests.js  test-summary.js
.github/ISSUE_TEMPLATE/: beta-feedback.yml
.github/workflows/: build-windows-installer.yml  ci.yml  docker-publish.yml  windows-beta-installer.yml  windows-release.yml
configs/: config.json.example
desktop/wrb-dashboard-tauri/: README.md  index.html  package-lock.json  package.json
desktop/wrb-dashboard-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/wrb-dashboard-tauri/src-tauri/src/: main.rs
docker/: docker-compose.build.yml  docker-compose.yml
docs/: DEPENDENCY-REGISTER.md  GOVERNANCE.md  OPENCLAW_CONFIG_GUIDE-JA.md  OPENCLAW_CONFIG_GUIDE-ZH.md  OPENCLAW_CONFIG_GUIDE.md  OPENCODE_CONFIG_EXAMPLE.md  PROVIDER_ADAPTER_GUIDE.md  WINDOWS_BETA_PRE_RELEASE.md  WINDOWS_BETA_RELEASE_NOTES_TEMPLATE.md
installer/: BlacklistedProxy.iss  README.md
installer/assets/: README.md
installer/legal/: FullLegalTerms.rtf  HoldHarmless.txt  TOS.txt
static/: ensemble-synthesizer.html  index.html  login.html  model-usage-stats.html  token-optimizer.html  universal-guard.html
tests/: hybrid-gateway.test.js  universal-guard-pii-scrubber.test.js
tls-sidecar/: go.mod  go.sum
(+76 files in other folders)
